# my-polars-ai

./: README.md  requirements.txt  setup.cfg
examples/: single_dataframe_example.py
polarsai/: __init__.py
polarsai/llm/: base.py  langchain_base.py
polarsai/polarsai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polarsai/prompts/: base.py  correct_error_prompt.py  correct_multiples_prompt.py  generate_python_code.py  multiple_dataframes.py
