[metadata]
name = mypolarsai
version = 0.0.14
author = sumanth
author_email = sumanthomgowda@gmail.com
description = mypoalrsai is an integration between the Python Polars library and LLM models created by me to test convcersions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slackroo/my-polars-ai
project_urls =
    Bug Tracker = https://github.com/slackroo/my-polars-ai

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = mypolarsai

packages = find:
python_requires = >=3.10
include_package_data = true
install_requires = 
    astor
    ipython
    langchain
    pandas
    pandasai
    polars
    python-dotenv
    Requests
    vertexai

[options.packages.find]
where = mypolarsai